test/fail/not_expr_last_stmt_else.cll
if:none (true) {
    null;
} else {
    type x = { X<int> };
};
0;
